add button like

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             <div class="card">
                 <div class="pizzaLike">
                     <img src="img/LaCuma.svg" alt="Pizza de La Cuma">
-                    <input type="radio" />
-                    <img src="img/img-heart.png" class="img-like" alt="">
+                    <input type="checkbox">
                 </div>
                 <div class="information-pizza">
                     <h1 class="title-card">La Cuma</h1>
@@ -37,8 +36,7 @@
             <div class="card">
                 <div class="pizzaLike">
                     <img src="img/LaMenta.svg" alt="Pizza de La Menta">
-                    <input type="radio">
-                    <img src="img/img-heart.png" class="img-like" alt="">
+                    <input type="checkbox">
 
                 </div>
                 <div class="information-pizza">
@@ -52,8 +50,7 @@
             <div class="card">
                 <div class="pizzaLike">
                     <img src="img/LaBana.svg" alt="Pizza de La Bana">
-                    <input type="radio" />
-                    <img src="img/img-heart.png" class="img-like" alt="">
+                    <input type="checkbox" />
                 </div>
                 <div class="information-pizza">
                     <h1 class="title-card">La Bana</h1>
@@ -66,8 +63,7 @@
             <div class="card">
                 <div class="pizzaLike">
                     <img src="img/LaToca.svg" alt="Pizza de La Toca">
-                    <input type="radio" />
-                    <img src="img/img-heart.png" class="img-like" alt="">
+                    <input type="checkbox" />
                 </div>
                 <div class="information-pizza">
                     <h1 class="title-card">La Toca</h1>
