--- a/index.html
+++ b/index.html
@@ -14,70 +14,89 @@
 <body>
     <main>
         <div class="bg-lapizza">
-            <img src="img/bg-laPizza-mobile.svg" class="bg-pizza" alt="imagem de fundo do Lapizza" />
+            <img src="img/bg-Pizza.png" class="bg-pizza" alt="imagem de fundo do Lapizza" />
             <img src="img/logo-Lapizza.svg" class="bg-logo" alt="imagem do nome Lapizza">
         </div>
 
         <div class="content-pizzas">
+            <img src="img/Plant.svg" class="img-plant" alt="">
+            <img src="img/fish.svg" class="img-fish" alt="">
+            <img src="img/Mashroom.svg" class="img-mashroom" alt="">
+            <img src="img/Leaf.svg" class="img-leaf" alt="">
+            <img src="img/chili.svg" class="img-chili" alt="">
+            <img src="" alt="">
+
             <h1 class="title">Mais Vendidas</h1>
-            <div class="card">
-                <div class="pizzaLike">
-                    <img src="img/LaCuma.svg" alt="Pizza de La Cuma">
-                    <input type="checkbox">
-                </div>
-                <div class="information-pizza">
-                    <h1 class="title-card">La Cuma</h1>
-                    <p class="p-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <div class="cards">
 
-                    <span class="price-pizza">R$ 23</span>
+                <div class="card">
+                    <div class="pizzaLike">
+                        <img src="img/LaCuma.svg" alt="Pizza de La Cuma">
+                        <input type="checkbox">
+                    </div>
+                    <div class="information-pizza">
+                        <h1 class="title-card">La Cuma</h1>
+                        <p class="p-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                        <span class="price-pizza">R$ 23</span>
+                    </div>
+                    <button class="buy-pizza">Comprar Agora</button>
                 </div>
-                <button class="buy-pizza">Comprar Agora</button>
+                <div class="card">
+                    <div class="pizzaLike">
+                        <img src="img/LaMenta.svg" alt="Pizza de La Menta">
+                        <input type="checkbox">
+
+                    </div>
+                    <div class="information-pizza">
+                        <h1 class="title-card">La Menta</h1>
+                        <p class="p-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                        <span class="price-pizza">R$ 23</span>
+                    </div>
+                    <button class="buy-pizza">Comprar Agora</button>
+                </div>
+                <div class="card">
+                    <div class="pizzaLike">
+                        <img src="img/LaBana.svg" alt="Pizza de La Bana">
+                        <input type="checkbox" />
+                    </div>
+                    <div class="information-pizza">
+                        <h1 class="title-card">La Bana</h1>
+                        <p class="p-card"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <span class="price-pizza">R$ 23</span>
+                    </div>
+                    <button class="buy-pizza">Comprar Agora</button>
+                </div>
+
+                <div class="card">
+
+                    <div class="pizzaLike">
+                        <img src="img/LaToca.svg" alt="Pizza de La Toca">
+                        <input type="checkbox" />
+                    </div>
+                    <div class="information-pizza">
+                        <h1 class="title-card">La Toca</h1>
+                        <p class="p-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+
+                        <span class="price-pizza">R$ 23</span>
+                    </div>
+                    <button class="buy-pizza">Comprar Agora</button>
+                    
+                </div>
+                
             </div>
-            <div class="card">
-                <div class="pizzaLike">
-                    <img src="img/LaMenta.svg" alt="Pizza de La Menta">
-                    <input type="checkbox">
-
-                </div>
-                <div class="information-pizza">
-                    <h1 class="title-card">La Menta</h1>
-                    <p class="p-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    <span class="price-pizza">R$ 23</span>
-                </div>
-                <button class="buy-pizza">Comprar Agora</button>
-            </div>
-            <div class="card">
-                <div class="pizzaLike">
-                    <img src="img/LaBana.svg" alt="Pizza de La Bana">
-                    <input type="checkbox" />
-                </div>
-                <div class="information-pizza">
-                    <h1 class="title-card">La Bana</h1>
-                    <p class="p-card"> Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <span class="price-pizza">R$ 23</span>
-                </div>
-                <button class="buy-pizza">Comprar Agora</button>
-            </div>
-
-            <div class="card">
-                <div class="pizzaLike">
-                    <img src="img/LaToca.svg" alt="Pizza de La Toca">
-                    <input type="checkbox" />
-                </div>
-                <div class="information-pizza">
-                    <h1 class="title-card">La Toca</h1>
-                    <p class="p-card">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-
-                    <span class="price-pizza">R$ 23</span>
-                </div>
-                <button class="buy-pizza">Comprar Agora</button>
-
-            </div>
+        </div>
+        <div class="content-aboutPizza">
+            <img src="img/img-pizza.svg" class="img-pizza" alt="">
+            <img src="img/img-tomato.svg" class="img-tomato" alt="">
+            <img src="img/img-pizza-pic.png" class="img-pizza-pic" alt="">
+            <img src="img/img-reataurant.svg" class="img-restaurant" alt="">
             <div class="aboutPizza">
                 <h1 class="h1-aboutPizza">Sobre a La P<span style="color: #FFA200;">i</span><span
                         style="color: #CF3031;">z</span><span style="color: #5C913B;">z</span>a</h1>
-                <p class="p-aboutPizza">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis justo sem.
+                <p class="p-aboutPizza">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce quis justo
+                    sem.
                     Donec consequat, nunc a
                     dapibus dapibus, justo dolor tristique tortor, sit amet tincidunt lorem nisl at ex. Cras dolor
                     purus,
@@ -88,6 +107,7 @@
                 <button class="button-aboutPizza">Ler Mais</button>
             </div>
         </div>
+
         <footer>
             <p>TODOS OS DIREITOS RESERVADOS</p>
         </footer>
